--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,39 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-1.46MB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.16MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 伊朗-1.29MB/s(Youtube:不良林), server: mci.myandroidplus1.ir, port: 80, type: vmess, uuid: c1214c26-f0fc-2f0a-81b0-84d10f8d14dc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api, ws-headers: {Host: mci.myandroidplus1.ir}}
-  - {name: 🇨🇳 中国-320.4KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇰🇷 韩国-432.8KB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-284.8KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-2.12MB/s(Youtube:不良林), server: 54.213.250.111, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 未知国家-922.2KB/s(Youtube:不良林), server: 193.178.210.29, port: 443, type: trojan, password: iKR3Ft, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-317.7KB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.46MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.16MB/s(Youtube:不良林)
-      - 伊朗-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-432.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-284.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 未知国家-922.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-317.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-1.46MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.16MB/s(Youtube:不良林)
-      - 伊朗-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-432.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-284.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 未知国家-922.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-317.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.46MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.16MB/s(Youtube:不良林)
-      - 伊朗-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-432.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-284.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 未知国家-922.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-317.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +48,29 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-1.46MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.16MB/s(Youtube:不良林)
-      - 伊朗-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-432.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-284.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 未知国家-922.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-317.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.46MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.16MB/s(Youtube:不良林)
-      - 伊朗-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-432.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-284.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 未知国家-922.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-317.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.46MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.16MB/s(Youtube:不良林)
-      - 伊朗-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-432.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-284.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 未知国家-922.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-317.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +86,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.46MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.16MB/s(Youtube:不良林)
-      - 伊朗-1.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-320.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-432.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-284.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
+      - 未知国家-922.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-317.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
