--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,72 +5,73 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-284.8KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-2.12MB/s(Youtube:不良林), server: 54.213.250.111, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 未知国家-922.2KB/s(Youtube:不良林), server: 193.178.210.29, port: 443, type: trojan, password: iKR3Ft, skip-cert-verify: true}
+  - {name: 未知国家-833.9KB/s(Youtube:不良林), server: 193.178.210.29, port: 443, type: trojan, password: iKR3Ft, skip-cert-verify: true}
   - {name: 🇯🇵 日本-317.7KB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
+  - {name: 🇭🇰 香港-929.0KB/s(Youtube:不良林), server: 426hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 426hk.fans8.xyz}}
+  - {name: 🇨🇳 中国-242.8KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-284.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 未知国家-922.2KB/s(Youtube:不良林)
+      - 未知国家-833.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-317.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-929.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-242.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-284.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 未知国家-922.2KB/s(Youtube:不良林)
+      - 未知国家-833.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-317.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-929.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-242.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-284.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 未知国家-922.2KB/s(Youtube:不良林)
+      - 未知国家-833.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-317.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-929.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-242.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-929.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-284.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 未知国家-922.2KB/s(Youtube:不良林)
+      - 未知国家-833.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-317.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-929.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-242.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-284.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 未知国家-922.2KB/s(Youtube:不良林)
+      - 未知国家-833.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-317.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-929.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-242.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-284.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 未知国家-922.2KB/s(Youtube:不良林)
+      - 未知国家-833.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-317.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-929.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-242.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -86,10 +87,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-284.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
-      - 未知国家-922.2KB/s(Youtube:不良林)
+      - 未知国家-833.9KB/s(Youtube:不良林)
       - 🇯🇵 日本-317.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-929.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-242.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
