--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,9 +6,8 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 未知国家-833.9KB/s(Youtube:不良林), server: 193.178.210.29, port: 443, type: trojan, password: iKR3Ft, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-317.7KB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
-  - {name: 🇭🇰 香港-929.0KB/s(Youtube:不良林), server: 426hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 426hk.fans8.xyz}}
   - {name: 🇨🇳 中国-242.8KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
+  - {name: 🇨🇳 中国-263.4KB/s(Youtube:不良林), server: bgpv2.ktyjsq.com, port: 12229, type: vmess, uuid: 9ea70d57-9cb6-3bd0-ae41-5601e516dcc6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -16,18 +15,16 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 未知国家-833.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-317.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-929.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-242.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-263.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 未知国家-833.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-317.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-929.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-242.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-263.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -35,14 +32,12 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 未知国家-833.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-317.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-929.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-242.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-263.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-929.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
@@ -50,18 +45,16 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 未知国家-833.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-317.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-929.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-242.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-263.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 未知国家-833.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-317.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-929.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-242.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-263.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -69,9 +62,8 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 未知国家-833.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-317.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-929.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-242.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-263.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -88,9 +80,8 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 未知国家-833.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-317.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-929.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-242.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-263.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
